feat: Adicionar configuração do Docker e do Docker Compose
Adiciona as configurações necessárias para utilizar o Docker e o Docker Compose na aplicação. Isso inclui a definição do Dockerfile, a instalação das dependências do sistema no container e a cópia do código-fonte para o container.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,7 @@ services:
         python manage.py seed_all &&
         python manage.py runserver 0.0.0.0:8000
       "
+    environment:
+      - PYTHONPATH=/app
     # env_file:
     #   - fileName.env
