--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2024.8.30
 charset-normalizer==3.4.0
 diff-match-patch==20230430
 Django==5.1.1
+django-environ==0.11.2
 django-filter==24.3
 django-import-export==4.1.1
 django-simple-history==3.7.0
